# whisper.cpp

./: CMakeLists.txt  SDL3_BUGFIX.md  SDL3_MIGRATION_COMPLETE.md  SDL3_TESTING_REPORT.md  test_sdl3  test_sdl3.cpp
.github/: copilot-instructions.md
docs/: SDL3-MIGRATION.md
examples/: CMakeLists.txt  common-sdl.cpp  common-sdl.h
examples/command/: CMakeLists.txt
examples/deprecation-warning/: CMakeLists.txt
examples/lsp/: CMakeLists.txt
examples/stream/: CMakeLists.txt
examples/talk-llama/: CMakeLists.txt
examples/wchess/wchess.cmd/: CMakeLists.txt
